<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drawer.Settings.SettingsSecurityFragment" >

    <TextView
        android:id="@+id/textView45"
        android:layout_width="335dp"
        android:layout_height="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/settings_security_title2"
        android:textAlignment="viewStart"
        android:textColor="#037C71"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="365dp"
        android:layout_height="24dp"
        android:layout_marginBottom="100dp"
        android:text="@string/settings_security_title3"
        android:textAlignment="viewStart"
        android:textColor="#037C71"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="360dp"
        android:layout_height="37dp"
        android:layout_marginBottom="244dp"
        android:text="@string/settings_security_title4"
        android:textAlignment="viewStart"
        android:textColor="#037C71"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="351dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_security_title1"
        android:textAlignment="viewStart"
        android:textColor="#037C71"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_security"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <ListView
        android:id="@+id/list_sessionsStarted"
        android:layout_width="354dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView49"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/settings_security_description1"
        android:textColor="#3276AC"
        app:layout_constraintBottom_toTopOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/settings_security_description2"
        android:textColor="#3276AC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView45" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/settings_security_description3"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="317dp"
        android:layout_height="31dp"
        android:layout_marginTop="1dp"
        android:layoutDirection="rtl"
        android:rotation="0"
        android:text="@string/settings_security_description4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="317dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layoutDirection="rtl"
        android:rotation="0"
        android:text="@string/settings_security_description5"
        app:layout_constraintBottom_toTopOf="@+id/textView48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioButton" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="328dp"
        android:layout_height="36dp"
        android:layout_marginTop="5dp"
        android:text="@string/settings_security_description6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>