<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="225dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        app:srcCompat="@drawable/logo_as_icon" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_below="@+id/imageView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="35dp"
                android:hint="@string/text_login"
                android:textColorHint="@color/black"
                android:gravity="left"
                android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="18dp"
                android:backgroundTint="@android:color/darker_gray"
                android:ems="10"
                android:hint="@string/text_email"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:layout_marginTop="40dp"
            android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@android:color/darker_gray"
                android:ems="10"
                android:textSize="18dp"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
            android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_ir_recuperar_contrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_forgot_password"
                android:background="@android:color/transparent"
                android:textColor="@android:color/darker_gray"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="0dp"
                />

            <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:background="#1976d2"
            android:text="@string/btn_login"
            android:textColor="#FFF"
            android:textSize="18sp" />

            <Button
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:background="#1976d2"
                android:text="@string/btn_google"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:drawableLeft="@drawable/icon_google"/>

            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_register_account"
                android:background="@android:color/transparent"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="15dp"
                />

        </LinearLayout>
    


</RelativeLayout>